fixing room nav-link invisible

--- a/docker/ruby/srcs/ft_transcendence/app/assets/stylesheets/application.css
+++ b/docker/ruby/srcs/ft_transcendence/app/assets/stylesheets/application.css
@@ -27,12 +27,12 @@
 	border: 1px solid transparent;
 }
 
-.nav-link {
+.dropdown-menu .nav-link {
 	background-color: transparent;
 	border: 1px solid transparent;
 	color: rgba(255, 255, 255, 0.5);
 }
 
-.nav-link:hover {
+.dropdown-menu .nav-link:hover {
 	color: rgba(255, 255, 255, 0.75);
 }
